@@ -56,8 +56,8 @@
           <artifactId>tycho-compiler-plugin</artifactId>
           <version>${tycho-version}</version>
           <configuration>
-            <source>17</source>
-            <target>17</target>
+            <source>21</source>
+            <target>21</target>
           </configuration>
         </plugin>
         <plugin>
@@ -102,7 +102,6 @@
             <showEclipseLog>true</showEclipseLog>
             <skipAfterFailureCount>10</skipAfterFailureCount>
             <providerHint>junit4</providerHint>
-            <argLine>${tycho.testArgLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -283,9 +282,6 @@
                 <goals>
                   <goal>prepare-agent</goal>
                 </goals>
-                <configuration>
-                  <propertyName>tycho.testArgLine</propertyName>
-                </configuration>
               </execution>
               <execution>
                 <id>merge-all</id>
